--- a/packages/stream-markdown/package.json
+++ b/packages/stream-markdown/package.json
@@ -29,5 +29,8 @@
     "bumpp": "^9.11.1",
     "tsdown": "^0.15.12",
     "typescript": "^5.9.3"
+  },
+  "dependencies": {
+    "shiki-stream": "^0.1.3"
   }
 }
